--- a/index.html
+++ b/index.html
@@ -13,7 +13,31 @@
     <title>Deco Blog</title>
   </head>
   <body>
-
+	<div class="container">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<a class="navbar-brand" href="#">DecoBlog</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+		</button>
+		 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav ml-auto">
+			<li class="nav-item active">
+				<a href="#" class="nav-link">Home</a>
+			</li>
+			<li class="nav-item">
+				<a href="#" class="nav-link">About me</a>
+			</li>
+			<li class="nav-item">
+				<a href="#" class="nav-link">Contact</a>
+			</li>
+			<li class="nav-item">
+				<a href="#" class="nav-link">Login</a>
+			</li>
+			</ul>
+		 </div>
+		</nav>
+	</div>
+	
     <!-- JavaScript -->
     <!-- jQuery -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
